--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="India’s only aggregated transport ecosystem 
-      One platform for your Ambulance, Cab and Logistic needs "
+      content="We are leading leisure and entertainment design firm with a proven track record of creating high-quality indoor entertainment facilities, competitive socializing spaces, and visitor attractions across 13 countries."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
@@ -18,7 +17,7 @@
     <title>Sport In</title>
   </head>
   <body>
-    <noscript>From ambulance to cab and logistics, DRiVing the extra mile for you, when it counts.</noscript>
+    <noscript>We are leading leisure and entertainment design firm with a proven track record of creating high-quality indoor entertainment facilities, competitive socializing spaces, and visitor attractions across 13 countries.</noscript>
     <div id="root"></div>    
   </body>
 </html>
